--- a/wiki/de/TechDraw_Preferences.html
+++ b/wiki/de/TechDraw_Preferences.html
@@ -46,7 +46,6 @@
 <p><span id="Files"></span>
 </p>
 <h3><span class="mw-headline" id="Dateien">Dateien</span></h3>
-<div class="mw-translate-fuzzy">
 <ul><li><b>Standard-Zeichnungsvorlage</b>: Standard-<a href="../de/TechDraw_Templates.html" title="TechDraw Templates/de">Vorlagendatei</a> f&uuml;r neue Zeichnungsbl&auml;tter.</li>
 <li><b>Vorlagenverzeichnis</b>: Startverzeichnis f&uuml;r die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_PageTemplate.svg&amp;filetimestamp=20241127175340&amp;.html" class="mw-file-description"><img src="../File/TechDraw_PageTemplate.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_PageTemplate.html" title="TechDraw PageTemplate/de">Neues Zeichnungsblatt aus einer Vorlage erstellen</a></span> in der Symbolleiste.</li>
 <li><b>Schraffurmusterdatei</b>: Standard-<a href="../de/SVG.html" title="SVG/de">SVG</a>- oder <a href="../de/Bitmap.html" title="Bitmap/de">Bitmap</a>-Datei f&uuml;r <a href="../de/TechDraw_Hatch.html" title="TechDraw Hatch/de">Schraffuren</a>.</li>
@@ -54,8 +53,7 @@
 <li><b>Verzeichnis f&uuml;r Schwei&szlig;symbole</b>: Standardverzeichnis f&uuml;r die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_WeldSymbol.svg&amp;filetimestamp=20240710145156&amp;.html" class="mw-file-description"><img src="../File/TechDraw_WeldSymbol.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_WeldSymbol.html" title="TechDraw WeldSymbol/de">Schwei&szlig;informationen zu einer Hinweislinie hinzuf&uuml;gen</a></span> in der Symbolleiste.</li>
 <li><b>PAT-Datei</b>: Standarddatei zum Festlegen von PAT-Mustern f&uuml;r  <a href="../de/TechDraw_GeometricHatch.html" title="TechDraw GeometricHatch/de">geometrische Schraffuren</a>.</li>
 <li><b>Mustername</b>: Name des Standard-PAT-Musters.</li>
-<li><b>Verzeichnis der Zeichnungselemente</b>: Alternatives Verzeichnis f&uuml;r die Suche nach SVG-Zeichnungselement-Dateien (Symbols).</li></ul>
-</div>
+<li><b>Verzeichnis der Zeichnungselemente</b>: Alternatives Verzeichnis f&uuml;r die Suche nach SVG-Zeichnungselement-Dateien (Symbole).</li></ul>
 <p><span id="Grid"></span>
 </p>
 <h3><span class="mw-headline" id="Raster">Raster</span></h3>
@@ -299,13 +297,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112054906
+Cached time: 20260112055143
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.110 seconds
-Real time usage: 0.151 seconds
-Preprocessor visited node count: 642/1000000
+CPU time usage: 0.113 seconds
+Real time usage: 0.182 seconds
+Preprocessor visited node count: 641/1000000
 Post&#8208;expand include size: 28287/2097152 bytes
 Template argument size: 10623/2097152 bytes
 Highest expansion depth: 5/100
@@ -315,19 +313,19 @@ Unstrip post&#8208;expand size: 1722/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.204      1 -total
- 27.79%    6.726      1 Template:TechDraw_Tools_navi/de
- 15.98%    3.868      2 Template:Navigation_menu_2
- 15.05%    3.643     33 Template:Version/de
- 13.53%    3.276      1 Template:Userdocnavi/de
- 11.96%    2.895      2 Template:Docnav/de
-  5.69%    1.378      1 Template:KEY
-  5.64%    1.365      1 Template:TOCright
-  5.12%    1.239      2 Template:Button
-  5.02%    1.214      2 Template:MenuCommand
+100.00%   31.589      1 -total
+ 28.36%    8.959      1 Template:TechDraw_Tools_navi/de
+ 16.31%    5.154      2 Template:Docnav/de
+ 15.49%    4.892      2 Template:Navigation_menu_2
+ 12.29%    3.883     33 Template:Version/de
+  8.33%    2.631      1 Template:Userdocnavi/de
+  6.01%    1.898      2 Template:Button
+  5.48%    1.730      1 Template:TOCright
+  4.32%    1.365      1 Template:KEY
+  4.08%    1.290      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:95107-0!canonical and timestamp 20260112054906 and revision id 1737188. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:95107-0!canonical and timestamp 20260112055143 and revision id 1737190. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
