--- a/wiki/de/TechDraw_Preferences.html
+++ b/wiki/de/TechDraw_Preferences.html
@@ -57,10 +57,8 @@
 <p><span id="Grid"></span>
 </p>
 <h3><span class="mw-headline" id="Raster">Raster</span></h3>
-<div class="mw-translate-fuzzy">
-<ul><li><b>Raster anzeigen</b>: Standardeinstellung f&uuml;r die Anzeige eines  Rasters auf neu erstellten Zeichnungsbl&auml;ttern.</li>
-<li><b>Rasterabstand</b>: Standardabstand zwischen Rasterlinien auf neu erstellten Zeichnungsbl&auml;ttern.</li></ul>
-</div>
+<ul><li><b>Raster anzeigen</b>: Standardeinstellung f&uuml;r die Anzeige eines Rasters auf neu erstellten Zeichnungsbl&auml;ttern.</li>
+<li><b>Rasterweite</b>: Standardabstand zwischen Rasterlinien auf neu erstellten Zeichnungsbl&auml;ttern.</li></ul>
 <p><span id="Selection"></span>
 </p>
 <h3><span class="mw-headline" id="Auswahl">Auswahl</span></h3>
@@ -297,13 +295,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112055143
+Cached time: 20260112055241
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.113 seconds
-Real time usage: 0.182 seconds
-Preprocessor visited node count: 641/1000000
+CPU time usage: 0.112 seconds
+Real time usage: 0.146 seconds
+Preprocessor visited node count: 640/1000000
 Post&#8208;expand include size: 28287/2097152 bytes
 Template argument size: 10623/2097152 bytes
 Highest expansion depth: 5/100
@@ -313,19 +311,19 @@ Unstrip post&#8208;expand size: 1722/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   31.589      1 -total
- 28.36%    8.959      1 Template:TechDraw_Tools_navi/de
- 16.31%    5.154      2 Template:Docnav/de
- 15.49%    4.892      2 Template:Navigation_menu_2
- 12.29%    3.883     33 Template:Version/de
-  8.33%    2.631      1 Template:Userdocnavi/de
-  6.01%    1.898      2 Template:Button
-  5.48%    1.730      1 Template:TOCright
-  4.32%    1.365      1 Template:KEY
-  4.08%    1.290      2 Template:MenuCommand
+100.00%   17.978      1 -total
+ 25.36%    4.560      1 Template:TechDraw_Tools_navi/de
+ 19.02%    3.419     33 Template:Version/de
+ 16.54%    2.973      2 Template:Navigation_menu_2
+ 13.62%    2.448      2 Template:Docnav/de
+  8.05%    1.448      1 Template:Userdocnavi/de
+  5.97%    1.074      1 Template:KEY
+  5.79%    1.041      1 Template:TOCright
+  5.64%    1.014      2 Template:MenuCommand
+  5.19%    0.933      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:95107-0!canonical and timestamp 20260112055143 and revision id 1737190. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:95107-0!canonical and timestamp 20260112055241 and revision id 1737194. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
