--- a/wiki/cs/Manual;Import_and_export_to_other_filetypes.html
+++ b/wiki/cs/Manual;Import_and_export_to_other_filetypes.html
@@ -207,7 +207,7 @@
 </td></tr></tbody></table>
 <p>N&#283;kter&eacute; z t&#283;chto form&aacute;t&#367; soubor&#367; maj&iacute; volby. Ty lze nakonfigurovat v menu <b>Upravit &rarr; P&#345;edvolby &rarr; Import/export:</b>
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_ImportExport.png&amp;filetimestamp=20240613205404&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_ImportExport.png" decoding="async" width="895" height="935" class="mw-file-element" data-file-width="895" data-file-height="935"></a></span>
-</p><p><b>Read more</b>
+</p><p><b>Dal&scaron;&iacute; informace:</b>
 </p>
 <ul><li><a href="../Import_Export.html" title="Import Export">All file formats supported by FreeCAD</a></li>
 <li><a href="../Draft_DXF.html" title="Draft DXF">Working with DXF files in FreeCAD</a>:</li>
@@ -228,12 +228,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112055312
+Cached time: 20260112055357
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.061 seconds
-Real time usage: 0.092 seconds
+CPU time usage: 0.048 seconds
+Real time usage: 0.072 seconds
 Preprocessor visited node count: 73/1000000
 Post&#8208;expand include size: 8340/2097152 bytes
 Template argument size: 744/2097152 bytes
@@ -244,13 +244,13 @@ Unstrip post&#8208;expand size: 3132/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.710      1 -total
- 74.24%    7.209      1 Template:Manual:TOC
- 57.40%    5.573      1 Manual:Summary/cs
- 22.28%    2.163      2 Template:Docnav
+100.00%    8.013      1 -total
+ 72.41%    5.802      1 Template:Manual:TOC
+ 54.31%    4.352      1 Manual:Summary/cs
+ 23.64%    1.894      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410729-0!canonical and timestamp 20260112055312 and revision id 1737196. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410729-0!canonical and timestamp 20260112055357 and revision id 1737201. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
