--- a/wiki/de/TechDraw_Preferences.html
+++ b/wiki/de/TechDraw_Preferences.html
@@ -65,7 +65,7 @@
 <ul><li><b>Mehrfachauswahl-Modus aktivieren</b>: Wenn aktiviert, f&uuml;hrt das Klicken ohne <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Strg</span> nicht zum L&ouml;schen der bisherigen Auswahl. <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span></li></ul>
 <p><span id="View_Defaults"></span>
 </p>
-<h3><span class="mw-headline" id="Ansicht-Standards">Ansicht-Standards</span></h3>
+<h3><span id="Standardwerte_f.C3.BCr_Ansicht"></span><span class="mw-headline" id="Standardwerte_f&uuml;r_Ansicht">Standardwerte f&uuml;r Ansicht</span></h3>
 <div class="mw-translate-fuzzy">
 <ul><li><b>3D-Kamerarichtung verwenden</b>: Wenn akktiviert, wird die Richtung der 3D-Kamera (oder die Normale einer ausgew&auml;hlten Fl&auml;che) als Ansichtsrichtung verwendet. Wenn nicht aktiviert, werden Ansichten als Vorderansichten erstellt. <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span></li>
 <li><b>Benennung immer anzeigen</b>: Wenn aktiviert, werden die Benennungen von Ansichten auch dann angezeigt, wenn die Rahmen unterdr&uuml;ckt werden. <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span></li></ul>
@@ -293,12 +293,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112055313
+Cached time: 20260112055512
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.133 seconds
-Real time usage: 0.364 seconds
+CPU time usage: 0.123 seconds
+Real time usage: 0.167 seconds
 Preprocessor visited node count: 639/1000000
 Post&#8208;expand include size: 28287/2097152 bytes
 Template argument size: 10623/2097152 bytes
@@ -309,19 +309,19 @@ Unstrip post&#8208;expand size: 1722/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   57.254      1 -total
- 37.74%   21.606      1 Template:TechDraw_Tools_navi/de
- 15.59%    8.927      2 Template:Navigation_menu_2
- 14.42%    8.258      2 Template:MenuCommand
- 11.15%    6.383      1 Template:TOCright
-  9.51%    5.444      1 Template:Userdocnavi/de
-  8.12%    4.651      2 Template:Button
-  6.59%    3.774     33 Template:Version/de
-  6.27%    3.589      2 Template:Docnav/de
-  1.61%    0.921      1 Template:KEY
+100.00%   25.260      1 -total
+ 29.20%    7.377      1 Template:TechDraw_Tools_navi/de
+ 16.64%    4.202     33 Template:Version/de
+ 14.71%    3.716      2 Template:Docnav/de
+ 14.45%    3.649      2 Template:Navigation_menu_2
+  8.87%    2.240      1 Template:Userdocnavi/de
+  5.69%    1.438      2 Template:MenuCommand
+  5.65%    1.426      1 Template:TOCright
+  5.08%    1.283      2 Template:Button
+  4.61%    1.165      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:95107-0!canonical and timestamp 20260112055313 and revision id 1737199. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:95107-0!canonical and timestamp 20260112055512 and revision id 1737203. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
