--- a/wiki/cs/Manual;All_workbenches_at_a_glance.html
+++ b/wiki/cs/Manual;All_workbenches_at_a_glance.html
@@ -11,14 +11,12 @@
 <li><a href="../zh-cn/Manual;All_workbenches_at_a_glance.html" class="mw-pt-progress mw-pt-progress--med" title="&#25163;&#20876;&#65306;&#19968;&#35272;&#25152;&#26377;&#24037;&#20316;&#21488; (39% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../ja/Manual;All_workbenches_at_a_glance.html" class="mw-pt-progress mw-pt-progress--low" title="&#12510;&#12491;&#12517;&#12450;&#12523;&#65306;&#12527;&#12540;&#12463;&#12505;&#12531;&#12481;&#19968;&#35239; (3% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
 <li><a href="../ko/Manual;All_workbenches_at_a_glance.html" class="mw-pt-progress mw-pt-progress--complete" title="&#49444;&#47749;&#49436;:&#47784;&#46304; &#51089;&#50629;&#45824;(workbench) &#54620;&#45576;&#50640; &#48372;&#44592; (100% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Manual;Import_and_export_to_other_filetypes.html" title="Manual:Import and export to other filetypes">Import and export to other filetypes</a></div>
-    <div><a href="../Manual;Traditional_modeling,_the_CSG_way.html" title="Manual:Traditional modeling, the CSG way">Traditional modeling, the CSG way</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Manual;Import_and_export_to_other_filetypes.html" title="Manual:Import and export to other filetypes">Import a export do jin&yacute;ch form&aacute;t&#367; soubor&#367;</a></div>
+    <div><a href="../Manual;Traditional_modeling,_the_CSG_way.html" title="Manual:Traditional modeling, the CSG way">Tradi&#269;n&iacute; modelov&aacute;n&iacute; metodou CSG</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../Manual;Introduction.html" title="Manual:Introduction">Manual start</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Crystal_Clear_manual.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="128" data-file-height="128"></span></span></div>
-</div>
 </div>
 <div id="toc" class="manualtoc" style="float:right; margin:10px 0px 10px 10px;">
 <ul><li><a href="../Manual;Introduction.html" title="Manual:Introduction">Introduction</a></li>
@@ -1334,15 +1332,15 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112055737
+Cached time: 20260112055905
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.512 seconds
-Real time usage: 0.724 seconds
-Preprocessor visited node count: 646/1000000
-Post&#8208;expand include size: 8568/2097152 bytes
-Template argument size: 900/2097152 bytes
+CPU time usage: 0.511 seconds
+Real time usage: 0.742 seconds
+Preprocessor visited node count: 645/1000000
+Post&#8208;expand include size: 8601/2097152 bytes
+Template argument size: 922/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1350,13 +1348,13 @@ Unstrip post&#8208;expand size: 2868/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.571      1 -total
- 67.66%    5.799      1 Template:Manual:TOC
- 49.78%    4.267      1 Manual:Summary/cs
- 24.25%    2.078      2 Template:Docnav
+100.00%   10.071      1 -total
+ 72.95%    7.347      1 Template:Manual:TOC
+ 47.83%    4.817      1 Manual:Summary/cs
+ 20.92%    2.107      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112055736 and revision id 1737207. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112055904 and revision id 1737209. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
