--- a/wiki/cs/Manual;All_workbenches_at_a_glance.html
+++ b/wiki/cs/Manual;All_workbenches_at_a_glance.html
@@ -1321,26 +1321,24 @@
 </div>
 <p><br>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Manual;Import_and_export_to_other_filetypes.html" title="Manual:Import and export to other filetypes">Import and export to other filetypes</a></div>
-    <div><a href="../Manual;Traditional_modeling,_the_CSG_way.html" title="Manual:Traditional modeling, the CSG way">Traditional modeling, the CSG way</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Manual;Import_and_export_to_other_filetypes.html" title="Manual:Import and export to other filetypes">Import a export do jin&yacute;ch form&aacute;t&#367; soubor&#367;</a></div>
+    <div><a href="../Manual;Traditional_modeling,_the_CSG_way.html" title="Manual:Traditional modeling, the CSG way">Tradi&#269;n&iacute; modelov&aacute;n&iacute; metodou CSG</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../Manual;Introduction.html" title="Manual:Introduction">Manual start</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Crystal_Clear_manual.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="128" data-file-height="128"></span></span></div>
 </div>
-</div>
 <!-- 
 NewPP limit report
-Cached time: 20260112055905
+Cached time: 20260112055920
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.511 seconds
-Real time usage: 0.742 seconds
-Preprocessor visited node count: 645/1000000
-Post&#8208;expand include size: 8601/2097152 bytes
-Template argument size: 922/2097152 bytes
+CPU time usage: 0.433 seconds
+Real time usage: 0.514 seconds
+Preprocessor visited node count: 644/1000000
+Post&#8208;expand include size: 8634/2097152 bytes
+Template argument size: 944/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1348,13 +1346,13 @@ Unstrip post&#8208;expand size: 2868/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.071      1 -total
- 72.95%    7.347      1 Template:Manual:TOC
- 47.83%    4.817      1 Manual:Summary/cs
- 20.92%    2.107      2 Template:Docnav
+100.00%    7.854      1 -total
+ 65.92%    5.177      1 Template:Manual:TOC
+ 52.04%    4.087      1 Manual:Summary/cs
+ 26.87%    2.110      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112055904 and revision id 1737209. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112055919 and revision id 1737211. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
