--- a/wiki/cs/Manual;All_workbenches_at_a_glance.html
+++ b/wiki/cs/Manual;All_workbenches_at_a_glance.html
@@ -67,10 +67,8 @@
 <li><a href="../Manual;Creating_parametric_objects.html" title="Manual:Creating parametric objects">Creating parametric objects</a></li>
 <li><a href="../Manual;Creating_interface_tools.html" title="Manual:Creating interface tools">Creating interface tools</a></li></ul></li>
 <li><a href="../Manual;The_Community.html" title="Manual:The Community">The community</a></li></ul></div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>As previously mentioned, FreeCAD offers various workbenches, each dedicated to different applications. Although the multitude of options might seem overwhelming at first, each workbench is designed to cater to specific tasks, making the overall workflow more efficient and tailored to various project requirements. For instance, the Part Design workbench is ideal for creating and modifying solid 3D models, while the Draft workbench is perfect for 2D drafting and drawing. This modular approach allows users to customize their interface and toolset according to their specific needs and preferences.
+<p>Jak ji&#382; bylo zm&iacute;n&#283;no, FreeCAD nab&iacute;z&iacute; r&#367;zn&eacute; pracovn&iacute; prost&#345;ed&iacute;, z nich&#382; ka&#382;d&eacute; je ur&#269;eno pro jin&eacute; aplikace. A&#269;koli se mno&#382;stv&iacute; mo&#382;nost&iacute; m&#367;&#382;e na prvn&iacute; pohled zd&aacute;t ohromuj&iacute;c&iacute;, ka&#382;d&eacute; pracovn&iacute; prost&#345;ed&iacute; je navr&#382;eno tak, aby vyhovovalo konkr&eacute;tn&iacute;m &uacute;kol&#367;m, co&#382; zvy&scaron;uje celkovou efektivitu pracovn&iacute;ho postupu a p&#345;izp&#367;sobuje ho r&#367;zn&yacute;m po&#382;adavk&#367;m projektu. Nap&#345;&iacute;klad pracovn&iacute; plocha Part Design je ide&aacute;ln&iacute; pro vytv&aacute;&#345;en&iacute; a &uacute;pravy pevn&yacute;ch 3D model&#367;, zat&iacute;mco pracovn&iacute; plocha Draft je perfektn&iacute; pro 2D kreslen&iacute; a navrhov&aacute;n&iacute;. Tento modul&aacute;rn&iacute; p&#345;&iacute;stup umo&#382;&#328;uje u&#382;ivatel&#367;m p&#345;izp&#367;sobit rozhran&iacute; a sadu n&aacute;stroj&#367; podle sv&yacute;ch konkr&eacute;tn&iacute;ch pot&#345;eb a preferenc&iacute;.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>On this page, you will find information regarding the basic set of workbenches and their functionalities. For additional information, feel free to refer to each <a href="../Workbenches.html" title="Workbenches">workbench</a> page in the FreeCAD documentation for a more complete list.
 </p>
@@ -1330,13 +1328,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112055920
+Cached time: 20260112060012
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.433 seconds
-Real time usage: 0.514 seconds
-Preprocessor visited node count: 644/1000000
+CPU time usage: 0.548 seconds
+Real time usage: 0.759 seconds
+Preprocessor visited node count: 643/1000000
 Post&#8208;expand include size: 8634/2097152 bytes
 Template argument size: 944/2097152 bytes
 Highest expansion depth: 5/100
@@ -1346,13 +1344,13 @@ Unstrip post&#8208;expand size: 2868/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.854      1 -total
- 65.92%    5.177      1 Template:Manual:TOC
- 52.04%    4.087      1 Manual:Summary/cs
- 26.87%    2.110      2 Template:Docnav
+100.00%   11.374      1 -total
+ 67.15%    7.638      1 Template:Manual:TOC
+ 53.94%    6.135      1 Manual:Summary/cs
+ 26.23%    2.984      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112055919 and revision id 1737211. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112060011 and revision id 1737213. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
