--- a/wiki/cs/Manual;All_workbenches_at_a_glance.html
+++ b/wiki/cs/Manual;All_workbenches_at_a_glance.html
@@ -6,7 +6,7 @@
 <li><a href="../it/Manual;All_workbenches_at_a_glance.html" class="mw-pt-progress mw-pt-progress--med" title="Manuale: Panoramica su tutti gli ambienti di lavoro (65% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Manual;All_workbenches_at_a_glance.html" class="mw-pt-progress mw-pt-progress--complete" title="Podr&#281;cznik:&#346;rodowiska pracy - przegl&#261;d (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ro/Manual;All_workbenches_at_a_glance.html" class="mw-pt-progress mw-pt-progress--med" title="Manual:Toate atelierele dintr-o privire (29% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../ru/Manual;All_workbenches_at_a_glance.html" class="mw-pt-progress mw-pt-progress--high" title="&#1056;&#1091;&#1082;&#1086;&#1074;&#1086;&#1076;&#1089;&#1090;&#1074;&#1086;:&#1055;&#1077;&#1088;&#1074;&#1099;&#1081; &#1074;&#1079;&#1075;&#1083;&#1103;&#1076; &#1085;&#1072; &#1074;&#1089;&#1077; &#1074;&#1077;&#1088;&#1089;&#1090;&#1072;&#1082;&#1080; (97% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Manual;All_workbenches_at_a_glance.html" class="mw-pt-progress mw-pt-progress--med" title="&#25163;&#20876;&#65306;&#19968;&#35272;&#25152;&#26377;&#24037;&#20316;&#21488; (39% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../ja/Manual;All_workbenches_at_a_glance.html" class="mw-pt-progress mw-pt-progress--low" title="&#12510;&#12491;&#12517;&#12450;&#12523;&#65306;&#12527;&#12540;&#12463;&#12505;&#12531;&#12481;&#19968;&#35239; (3% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
@@ -68,11 +68,8 @@
 <li><a href="../Manual;Creating_interface_tools.html" title="Manual:Creating interface tools">Creating interface tools</a></li></ul></li>
 <li><a href="../Manual;The_Community.html" title="Manual:The Community">The community</a></li></ul></div>
 <p>Jak ji&#382; bylo zm&iacute;n&#283;no, FreeCAD nab&iacute;z&iacute; r&#367;zn&eacute; pracovn&iacute; prost&#345;ed&iacute;, z nich&#382; ka&#382;d&eacute; je ur&#269;eno pro jin&eacute; aplikace. A&#269;koli se mno&#382;stv&iacute; mo&#382;nost&iacute; m&#367;&#382;e na prvn&iacute; pohled zd&aacute;t ohromuj&iacute;c&iacute;, ka&#382;d&eacute; pracovn&iacute; prost&#345;ed&iacute; je navr&#382;eno tak, aby vyhovovalo konkr&eacute;tn&iacute;m &uacute;kol&#367;m, co&#382; zvy&scaron;uje celkovou efektivitu pracovn&iacute;ho postupu a p&#345;izp&#367;sobuje ho r&#367;zn&yacute;m po&#382;adavk&#367;m projektu. Nap&#345;&iacute;klad pracovn&iacute; plocha Part Design je ide&aacute;ln&iacute; pro vytv&aacute;&#345;en&iacute; a &uacute;pravy pevn&yacute;ch 3D model&#367;, zat&iacute;mco pracovn&iacute; plocha Draft je perfektn&iacute; pro 2D kreslen&iacute; a navrhov&aacute;n&iacute;. Tento modul&aacute;rn&iacute; p&#345;&iacute;stup umo&#382;&#328;uje u&#382;ivatel&#367;m p&#345;izp&#367;sobit rozhran&iacute; a sadu n&aacute;stroj&#367; podle sv&yacute;ch konkr&eacute;tn&iacute;ch pot&#345;eb a preferenc&iacute;.
+</p><p>Na t&eacute;to str&aacute;nce najdete informace o z&aacute;kladn&iacute; sad&#283; pracovn&iacute;ch ploch a jejich funkc&iacute;ch. Dal&scaron;&iacute; informace najdete na str&aacute;nk&aacute;ch jednotliv&yacute;ch <a href="../Workbenches.html" title="Workbenches">pracovn&iacute;ch ploch</a> v dokumentaci FreeCADu, kde je uveden jejich &uacute;pln&yacute; seznam.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>On this page, you will find information regarding the basic set of workbenches and their functionalities. For additional information, feel free to refer to each <a href="../Workbenches.html" title="Workbenches">workbench</a> page in the FreeCAD documentation for a more complete list.
-</p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>An interesting feature of FreeCAD is the ability to obtain additional information by hovering the mouse over a command. This tooltip functionality helps users understand what each command does, providing guidance and making it easier to learn and navigate the software.
 </p>
@@ -1328,13 +1325,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112060012
+Cached time: 20260112060109
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.548 seconds
-Real time usage: 0.759 seconds
-Preprocessor visited node count: 643/1000000
+CPU time usage: 0.477 seconds
+Real time usage: 0.756 seconds
+Preprocessor visited node count: 642/1000000
 Post&#8208;expand include size: 8634/2097152 bytes
 Template argument size: 944/2097152 bytes
 Highest expansion depth: 5/100
@@ -1344,13 +1341,13 @@ Unstrip post&#8208;expand size: 2868/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.374      1 -total
- 67.15%    7.638      1 Template:Manual:TOC
- 53.94%    6.135      1 Manual:Summary/cs
- 26.23%    2.984      2 Template:Docnav
+100.00%   12.387      1 -total
+ 69.07%    8.555      1 Template:Manual:TOC
+ 57.83%    7.163      1 Manual:Summary/cs
+ 26.07%    3.229      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112060011 and revision id 1737213. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410739-0!canonical and timestamp 20260112060108 and revision id 1737215. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
